syntax = "proto3";
package AppOpLogList;
option objc_class_prefix="AppOpLogList";
option java_package = "com.asiainno.hekka.proto.user";

//url: https://****.com/admin/appOpLog/list
message Request {
    int64 userId = 1;
    int32 pageNum  = 2; //第几页
    int32 pageSize = 3; //每页长度
}

message Response {
    repeated AppOpLogInfo opLogList = 1;
    int32 total = 2; //总条数
}

message AppOpLogInfo {
    int64 id = 1;
    int32 userId=2;
    string logUrl = 3;
    string userAgent = 4;
    int64 createTime = 5;
}