syntax = "proto3";
package AppUserEmailLogin;
option objc_class_prefix="AppUserEmailLogin";
option java_package = "com.asiainno.hekka.proto.user";
import "UserType.proto";
import "UserProfileInfo.proto";

//url: https://****.com/user/email/login
message Request {
    UserType.BindType bindType = 1;  //第三方类型
    //facebook H5 login code参数
    string thirdToken = 2;//第三方token
    string thirdId = 3;//第三方token
    string password = 4;//密码
    string email = 5;//邮箱
    string tongdunId = 6;//同盾id
    string adjustId = 7;
}

message Response {
    string token = 1;// 登录token
    string refreshToken = 2;
    UserProfileInfo.UserProfileInfo userProfileInfo = 3;
    int32 loginType = 4;// 1 登录， 2 注册
    bool hasSwitchNationalStore  = 5; //是否切换了国家站
    //facebook h5登录的认证请求URL
}