syntax = "proto3";
package UserEmailForgetPasswordContent;
option objc_class_prefix="UserEmailForgetPasswordContent";
option java_package = "com.asiainno.hekka.proto.user";

// 邮件模板服务
//url: https://****.com/user/email/forgetPasswordContent
message Request {
    string validToken = 1;
    string language =2;
    string sign = 3;// 签名
}

message Response {
    string validTokenUrl = 1;
}