syntax = "proto3";
package UserForgetPassword;
option objc_class_prefix="UserForgetPassword";
option java_package = "com.asiainno.hekka.proto.user";


//url: https://****.com/user/forgetPassword
message Request {
    string email = 1;//邮箱
}

message Response {

}