syntax = "proto3";
package UserForgetPasswordValidToken;
option objc_class_prefix="UserForgetPasswordValidToken";
option java_package = "com.asiainno.hekka.proto.user";


//url: https://****.com/user/forgetPasswordValidToken
message Request {
    string token = 1;//邮箱
}

message Response {

}