syntax = "proto3";
package UserResetPassword;
option objc_class_prefix="UserResetPassword";
option java_package = "com.asiainno.hekka.proto.user";


//url: https://****.com/user/resetPasswordByToken 找回密码时重设密码
//url: https://****.com/user/resetPassword 登录状态重设密码
message Request {
    string token = 1;// 充值密码token
    string password = 2; // 密码需要md5 加密后传入和app 保持一致
    string originPassword=3;//注意 找回密码是可为空，但是token必填
}

message Response {

}